--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.5
   firebase_auth: ^3.3.4
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
