--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   firebase_auth: ^3.3.4
   provider: ^6.0.1
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
