--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.1
   carousel_slider: ^4.0.0
   flutter_staggered_grid_view: ^0.6.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
