--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_staggered_grid_view: ^0.6.0
   transparent_image: ^2.0.0
+  alphabet_list_scroll_view: ^2.0.0
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
