--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   alphabet_list_scroll_view: ^2.0.0
   faker: ^2.0.0
   image_picker: ^0.8.4+5
+  image_cropper: ^1.4.1
 
 dev_dependencies:
   flutter_test:
