--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   faker: ^2.0.0
   image_picker: ^0.8.4+5
   image_cropper: ^1.4.1
+  brasil_fields: 1.3.1
 
 dev_dependencies:
   flutter_test:
