--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^0.8.4+5
   image_cropper: ^1.4.1
   brasil_fields: 1.3.1
+  firebase_storage: ^10.2.7
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
