--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   brasil_fields: 1.3.1
   firebase_storage: ^10.2.7
   uuid: ^3.0.5
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
