--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   gallery_saver: ^2.3.2
   screenshot: ^1.2.3
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
