--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.0.9
   flutter_signin_button: ^2.0.0
   flutter_facebook_auth: '^3.5.0'
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
