--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   flutter_facebook_auth: '^3.5.0'
   url_launcher: ^6.0.20
+  map_launcher: ^2.2.1+1
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
