--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flip_card: ^0.6.0
   mask_text_input_formatter: ^2.1.0
+  credit_card_type_detector: ^2.0.0-nullsafety.0
 
 
 dev_dependencies:
