--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flip_card: ^0.6.0
   mask_text_input_formatter: ^2.1.0
   credit_card_type_detector: ^2.0.0-nullsafety.0
+  cloud_functions: ^3.2.10
 
 
 dev_dependencies:
