--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cielo": "^2.4.4",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
