--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   mask_text_input_formatter: ^2.1.0
   credit_card_type_detector: ^2.0.0-nullsafety.0
   cloud_functions: ^3.2.10
+  firebase_messaging: ^11.2.11
 
 
 dev_dependencies:
